MAJOR changes in all models controllers services and routes after testing to make all the apis of quality + quality Template + project resources + project types + project status + travel working
