# controllers/travel.js
@@ -89,6 +89,28 @@ class TravelController {
         }
     }
 
+    async getClaimById(req, res, next) {
+        try {
+
+            if (!req.user || !req.user.id) {
+                return Response.errorUnauthorized()(res);
+            }
+
+            const claimId = req.params.id;
+
+            const [data, ok] = await travelService.fetchByClaimId(claimId)
+
+            if (!ok) {
+                return Response.errorGeneric([], data)(res);
+            }
+            return Response.successFetch(data)(res);
+
+        } catch (error) {
+            print(String(error), logType.error);
+            return Response.errorGeneric([], error.message)(res);
+        }
+    }
+
     async createRequisition(req, res, next) {
         const transaction = await db.sequelize.transaction();
 
@@ -99,21 +121,22 @@ class TravelController {
 
             const {
                 project,
-                details
+                requisition,
+                claims
             } = req.body;
 
-            if (!project) {
-                return Response.errorGeneric([], 'Valid project ID not present', 'Please select a project to enter a new requisition!')(res);
-            }
+            // if (!project) {
+            //     return Response.errorGeneric([], 'Valid project ID not present', 'Please select a project to enter a new requisition!')(res);
+            // }
 
-            const [error , resourceAssignedToProject] = await projectService.resourceAssignedToProject(projectId, req.user.id, req.user.isAdmin);
+            // const [error , resourceAssignedToProject] = await projectService.resourceAssignedToProject(projectId, req.user.id, req.user.isAdmin);
 
-            if (!resourceAssignedToProject) {
-                print(`USER ${req.user.id} WANTED TO CREATE NEW REQUISITION BUT UNAUTHORIZED`, logType.error);
-                return Response.errorGeneric([], 'Not authorized for this project', 'You are not assigned to this project!')(res);
-            }
+            // if (!resourceAssignedToProject) {
+            //     print(`USER ${req.user.id} WANTED TO CREATE NEW REQUISITION BUT UNAUTHORIZED`, logType.error);
+            //     return Response.errorGeneric([], 'Not authorized for this project', 'You are not assigned to this project!')(res);
+            // }
 
-            const [data, ok] = await travelService.createRequisition(project, details, req.user.id)
+            const [data, ok] = await travelService.createRequisition(project, requisition, claims, req.user.id)
 
             if (!ok) {
                 return Response.errorGeneric([], data)(res);
@@ -141,33 +164,33 @@ class TravelController {
                 return Response.errorGeneric([], 'Requisition ID Empty', 'This requisition ID doesn\'t exist or is invalid!')(res);
             }
 
-            const requisition = await travelService.fetchById(requisitionId, req.user.id, req.user.isAdmin)
-            if (!requisition) {
+            const requisition_existing = await travelService.fetchById(requisitionId, req.user.id, req.user.isAdmin)
+            if (!requisition_existing) {
                 print('REQUISITION FETCHED BUT EMPTY', logType.warning);
                 return Response.errorNotFound()(res);
             }
 
             const {
                 project,
-                details
+                requisition
             } = req.body
 
             if (!project) {
                 return Response.errorGeneric([], 'Valid project ID not present', 'Please select a project to edit the requisition!')(res);
             }
 
-            const [error , resourceAssignedToProject] = await projectService.resourceAssignedToProject(projectId,req.user.id, req.user.isAdmin);
+            const [error , resourceAssignedToProject] = await projectService.resourceAssignedToProject(projectId, req.user.id, req.user.isAdmin);
 
             if (!resourceAssignedToProject) {
                 print(`USER ${req.user.id} WANTED TO CREATE NEW REQUISITION BUT UNAUTHORIZED`, logType.error);
                 return Response.errorGeneric([], 'Not authorized for this project', 'You are not assigned to this project!')(res);
             }
 
-            if (!details || details.length === 0) {
+            if (!requisition || requisition.length === 0) {
                 return Response.errorGeneric([], 'Details array is required and should not be empty', 'Please provide valid details for editing the requisition!')(res);
             }
 
-            const [data, ok] = await travelService.editRequisition(requisitionId, req.user.id, details, project)
+            const [data, ok] = await travelService.editRequisition(requisitionId, req.user.id, requisition, project)
 
             if (!ok) {
                 return Response.errorGeneric([], data)(res);
@@ -175,7 +198,64 @@ class TravelController {
 
             print(`USER ${req.user.id} EDITED REQUISITION`, logType.success);
 
-            return Response.successUpdate(data)(res);
+            return Response.editSuccess(data)(res);
+
+        } catch (error) {
+            await transaction.rollback();
+            print(String(error), logType.error);
+            return Response.errorGeneric([], error.message)(res);
+        }
+    }
+
+    async editClaim(req, res, next) {
+        const transaction = await db.sequelize.transaction();
+
+        try {
+            if (!req.user || !req.user.id) {
+                return Response.errorUnauthorized()(res);
+            }
+
+            const claimId = req.params.id;
+
+            if (!claimId) {
+                return Response.errorGeneric([], 'Requisition ID Empty', 'This claim ID doesn\'t exist or is invalid!')(res);
+            }
+
+            const claim_existing = await travelService.fetchByClaimId(claimId)
+            if (!claim_existing) {
+                print('CLAIM FETCHED BUT EMPTY', logType.warning);
+                return Response.errorNotFound()(res);
+            }
+
+            const {
+                project,
+                claim
+            } = req.body
+
+            if (!project) {
+                return Response.errorGeneric([], 'Valid project ID not present', 'Please select a project to edit the claim!')(res);
+            }
+
+            const [error , resourceAssignedToProject] = await projectService.resourceAssignedToProject(projectId, req.user.id, req.user.isAdmin);
+
+            if (!resourceAssignedToProject) {
+                print(`USER ${req.user.id} WANTED TO CREATE NEW CLAIM BUT UNAUTHORIZED`, logType.error);
+                return Response.errorGeneric([], 'Not authorized for this project', 'You are not assigned to this project!')(res);
+            }
+
+            if (!claim || claim.length === 0) {
+                return Response.errorGeneric([], 'Details array is required and should not be empty', 'Please provide valid details for editing the claim!')(res);
+            }
+
+            const [data, ok] = await travelService.editClaim(claimId, req.user.id, claim)
+
+            if (!ok) {
+                return Response.errorGeneric([], data)(res);
+            }
+
+            print(`USER ${req.user.id} EDITED CLAIM`, logType.success);
+
+            return Response.editSuccess(data)(res);
 
         } catch (error) {
             await transaction.rollback();
@@ -193,16 +273,16 @@ class TravelController {
                 return Response.errorUnauthorized()(res);
             }
 
-            const [error , resourceAssignedToProject] = await projectService.resourceAssignedToProject(projectId,req.user.id, req.user.isAdmin);
+            // const [error , resourceAssignedToProject] = await projectService.resourceAssignedToProject(projectId,req.user.id, req.user.isAdmin);
 
-            if (!resourceAssignedToProject) {
-                print(`USER ${req.user.id} WANTED TO CREATE NEW REQUISITION BUT UNAUTHORIZED`, logType.error);
-                return Response.errorGeneric([], 'Not authorized for this project', 'You are not assigned to this project!')(res);
-            }
+            // if (!resourceAssignedToProject) {
+            //     print(`USER ${req.user.id} WANTED TO CREATE NEW REQUISITION BUT UNAUTHORIZED`, logType.error);
+            //     return Response.errorGeneric([], 'Not authorized for this project', 'You are not assigned to this project!')(res);
+            // }
 
             const requisitionId = req.params.id;
 
-            const [deletedRequisition, ok] = await travelService.deleteRequisition(requisitionId);
+            const [deletedRequisition, ok] = await travelService.deleteRequisition(requisitionId, req.user.id);
 
             if (!ok) {
                 await transaction.rollback();
@@ -211,6 +291,39 @@ class TravelController {
 
             await transaction.commit();
             return Response.deleteSuccess(deletedRequisition)(res);
+        } catch (error) {
+            await transaction.rollback();
+            return Response.errorGeneric([], error.message)(res);
+        }
+    }
+
+    async deleteClaim(req, res, next) {
+        const transaction = await db.sequelize.transaction();
+
+        try {
+
+            if (!req.user || !req.user.id) {
+                return Response.errorUnauthorized()(res);
+            }
+
+            // const [error , resourceAssignedToProject] = await projectService.resourceAssignedToProject(projectId,req.user.id, req.user.isAdmin);
+
+            // if (!resourceAssignedToProject) {
+            //     print(`USER ${req.user.id} WANTED TO CREATE NEW REQUISITION BUT UNAUTHORIZED`, logType.error);
+            //     return Response.errorGeneric([], 'Not authorized for this project', 'You are not assigned to this project!')(res);
+            // }
+
+            const claimId = req.params.id;
+
+            const [deletedClaim, ok] = await travelService.deleteClaim(claimId, req.user.id);
+
+            if (!ok) {
+                await transaction.rollback();
+                return Response.errorGeneric([], deletedClaim)(res);
+            }
+
+            await transaction.commit();
+            return Response.deleteSuccess(deletedClaim)(res);
         } catch (error) {
             await transaction.rollback();
             return Response.errorGeneric([], error.message)(res);
