# routes/quality.js
@@ -1,14 +1,16 @@
 const qualityRouter = require("express").Router()
 
-// const {authenticate} = require("../middleware")
-const {qualityController} = require("../../controllers")
+const {authenticate} = require("../middleware")
+const {qualityController} = require("../controllers")
 
+
+qualityRouter.use(authenticate)
 
 qualityRouter.route("/").get(qualityController.getAllTasks)
 qualityRouter.route("/:id").get(qualityController.getTaskById)
 qualityRouter.route("/").post(qualityController.createTask)
-qualityRouter.route("/:id").patch(qualityController.editTask)
+qualityRouter.route("/add/").post(qualityController.addTask)
+qualityRouter.route("/").patch(qualityController.editTask)
 qualityRouter.route("/:id").delete(qualityController.deleteTask)
-qualityRouter.route("/:project").get(qualityController.getTasksByProjectId)
 
 module.exports = qualityRouter
