# routes/templates/projects.js
@@ -1,13 +1,13 @@
 const projectTemplateRouter = require("express").Router()
 
-const {authenticate} = require("../middleware")
+// const {authenticate} = require("../middleware")
 
 
-projectTemplateRouter.route("/").get(projectTemplateController.fetchAll)
-projectTemplateRouter.route("/:id").get(projectTemplateController.fetchById)
-projectTemplateRouter.route("/").post(projectTemplateController.create)
-projectTemplateRouter.route("/:id").patch(projectTemplateController.edit)
-projectTemplateRouter.route("/:id").delete(projectTemplateController.delete)
+// projectTemplateRouter.route("/").get(projectTemplateController.fetchAll)
+// projectTemplateRouter.route("/:id").get(projectTemplateController.fetchById)
+// projectTemplateRouter.route("/").post(projectTemplateController.create)
+// projectTemplateRouter.route("/:id").patch(projectTemplateController.edit)
+// projectTemplateRouter.route("/:id").delete(projectTemplateController.delete)
 
 
 module.exports = projectTemplateRouter
